1000_kibana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  labels:
    app: kibana-service
spec:
  ports:
  - protocol: TCP
    port: 5601
    targetPort: 5601
    name: webinterface
  selector:
    app: kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.14.0
        ports:
        - containerPort: 5601
          name: webinterface
        volumeMounts:
        - name: config
          mountPath: /usr/share/kibana/config/kibana.yml
          readOnly: true
          subPath: kibana.yml
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
      volumes:
      - name: config
        configMap:
          name: kibana-config
