1001_kibana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ux360-kibana.izzi.mx
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kibana-service
            port:
              number: 5601
